fix: align resume button to the right

--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -21,7 +21,7 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 300px));
   grid-gap: 2rem;
   align-items: center;
-  margin: 2rem 0;
+  margin: 2rem 0 0;
 
   .but {
     width: 100%;
